--- a/css/style.css
+++ b/css/style.css
@@ -1,294 +1,441 @@
 /* Universal styles */
 
-html,body {
-    width: 100%;
-    height: 100%;
-    margin:0
-    padding:0;
-    font-family: Raleway, sans-serif;
-    }
+   /*Set the width, height,
+   font, padding, and margin
+   for html and body*/
+    html,body {
+        width: 100%;
+        height: 100%;
+        margin:0
+        padding:0;
+        font-family: Raleway, sans-serif;
+        }
 
-li {
-    font-size: 16px;
-    }
+    /*Set font size for nav items*/
+    li {
+        font-size: 16px;
+        }
 
-p{
-    font-family: Raleway, sans-serif;
-    }
+    /*Set the margin on table*/
+    table{
+        margin: 10%;
+        }
 
-table{
-    margin: 10%;
-    }
+    /*Set properties for map,
+    including position, height,
+    width, padding, and margin*/
+    #map{
+        position:fixed;
+        top:0;
+        bottom:0;
+        width: 100%;
+        height: 100%;
+        padding:0;
+        margin:0;
+        }
 
-#map{
-    position:fixed;
-    top:0;
-    bottom:0;
-    width: 100%;
-    height: 100%;
-    padding:0;
-    margin:0;
-    }
+    /*Set the cursor to render as
+    a crosshair*/
+    #map canvas {
+        cursor: crosshair;
+        }
 
-#map canvas {
-    cursor: crosshair;
-}
+   /*On mouse hover, change
+   text color. Override
+   bootstrap background color */
+    .hover a:hover{
+        color: #90FF23;
+        background-color: transparent !important;
+        text-decoration: none;
+        }
 
-.hover a:hover{
-    color: #90FF23;
-    background-color: transparent !important;
-    text-decoration: none;
+   /*On mouse focus, change
+   text color. Override
+   bootstrap background color */
+    .hover a:focus{
+        color: #90FF23;
+        background-color: transparent !important;
+        text-decoration: none;
+        }
 
-}
+   /*On mouse active, change
+   text color. Override
+   bootstrap background color */
+    .hover a:active {
+        color: #90FF23;
+        background-color: transparent !important;
+        text-decoration: none;
+        }
 
-.hover a:focus{
-    color: #90FF23;
-    background-color: transparent !important;
-    text-decoration: none;
+    /*Set nav container background color*/
+    .container-fluid{
+        background-color: #0F023D;
+        }
 
-}
 
-.hover a:active {
-    color: #90FF23;
-    background-color: transparent !important;
-    text-decoration: none;
-}
-
-.container-fluid{
-    background-color: #0F023D;
-    font-family: Raleway, sans-serif;
-}
-
-/*********************************/
-
-/* Navigation Styles */
+/* Responsive styles for screens with a minimum
+   width of 940 px*/
 @media only screen and (min-width: 940px){
 
-/*Bring navigation down from the top*/
-.nav{
-    padding-top: 2.8%;
-}
-
-/*Pad logo to the left*/
-.navbar-header{
-    padding-left: 50px;
-    font-size: 38px;
-    color: white;
-    padding-top: 29px;
-}
-
-.navbar-logo{
-    font-weight: 700;
-    padding-top: 16px;
-    padding-right: 80px;
-}
-
-.navbar-nav li a {
-    line-height: 50px;
-    color: white;
-    margin-left : 0.01em;
-    margin-right : 2em;
-    padding-bottom: 30px;
-}
-
-/*Overlay Styles*/
-.overlay {
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    padding-top: 20%;
-    width: 32%;
-    height: 100%;
-    overflow-y: auto;
-    background: #0F023D;
-    opacity: .95;
-    z-index: 500;
-    visibility: hidden;
-}
-
-#tableOverlay {
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    padding-top: 100px;
-    width: 32%;
-    height: 100%;
-    overflow-y: auto;
-    opacity: .95;
-    z-index: 600;
-    visibility: hidden;
-}
-
-.strategyType{
-    display: inline-block;
-    width: 250px;
-}
-
-
-
-#edgeTypeTitle, h4{
-    padding-top: 50px;
-    padding-left: 12%;
-    font-family: Raleway, extra-light;
-    font-size: 14px;
-    align-content: center;
-    z-index:800;
-    color: #60E8E7;
-}
-
-#edgeText{
-    display: inline-block;
-    font-size:14px;
-    padding-left: 12%;
-    font-family: Raleway, extra-light;
-    color: #FAE959;
-}
-
-#waveText{
-    display: inline-block;
-    font-size: 14px;
-    font-family: Raleway, extra-light;
-    padding-left: 4%;
-    color: #FAE959;
-}
-
-#topoText{
-    display: inline-block;
-    font-size: 14px;
-    font-family: Raleway, extra-light;
-    padding-left: 10%;
-    color: #FAE959;
-}
-
-
-#waveExpTitle, h4{
-    padding-top: 10px;
-    padding-left: 12%;
-    font-family: Raleway, extra-light;
-    font-size: 14px;
-    color: #60E8E7;
-    align-content: center;
-    z-index:800;
-}
-
-#topoTitle, h4{
-    padding-top: 10px;
-    padding-left: 12%;
-    font-family: Raleway, extra-light;
-    font-size: 14px;
-    color: #60E8E7;
-    align-content: center;
-    z-index:800;
-}
-
-#spaceBtwTitleAndStrats {
-    padding: 0px;
-}
-
-#tableHeader, th{
-    font-size: 15px;
-    color: #60E8E7;
-    padding-left: 3%;
-    line-height: 30px;
-    z-index:800;
-    font-family: Raleway, extra-light;
-}
-
-.strategyHeaders, th{
-    padding-left: 3%;
-    padding-bottom: 7px;
-    padding-top: 20px;
-    font-size: 15px;
-    color: #60E8E7;
-    line-height: 15px;
-    z-index:1800;
-    font-family: Raleway, extra-light;
-
-}
-
-.strategyType, td{
-    font-size: 14px;
-    padding-left: 4%;
-    line-height: 30px;
-    color: white;
-    z-index:1800;
-    font-family: Raleway, extra-light;
-    opacity: 90%;
-}
-
-.spaceBtwStrategies{
-    height:30px;
-}
-}
-
-
-@media only screen and (min-width: 769px) and (max-width:939px) {
-.container-fluid{
-    height: 100px;
-}
-
-.nav{
-    padding-top: 2%;
-}
-
-.navbar-header{
-    padding-left: 2%;
-    align-content: center;
-}
-
-
-.navbar-logo{
-    font-weight: 400;
-    align-content: center;
-    font-size: 35px;
-    color: white;
-    padding-right: 18px;
-    padding-top:13px;
-}
-
-.navbar-nav li a {
-    line-height: 14px;
-    margin-left : 0.5em;
-    color:white;
-    font-size: 14px;
-    padding-top: 22px;
-    padding-left: 0px;
-}
-}
-
-
-@media only screen and (min-width: 576px) and (max-width:768){
-    .container-fluid{
-    height: 400px;
-    }
-
+    /*Bring navigation down from the top*/
     .nav{
-        padding-top: 1.0%;
-    }
+        padding-top: 2.8%;
+        }
 
+    /*Set padding and logo for navbar header*/
     .navbar-header{
-        padding-left: 1%;
-        align-content: center;
-        height: 400px;
-    }
-
-    .navbar-logo{
-        background-color: red;
-        font-size: 14px;
-        font-weight: 200px;
-        align-content: center;
+        padding-left: 50px;
+        font-size: 38px;
         color: white;
-        padding-right: 9px;
-        padding-top: 7px;
-    }
+        padding-top: 29px;
+        }
 
+    /*Set padding and font weight for
+       navbar logo*/
+    .navbar-logo{
+        font-weight: 700;
+        padding-top: 16px;
+        padding-right: 80px;
+        }
+
+    /*Set properties for navigation
+      links on nav bar*/
     .navbar-nav li a {
-        line-height: 20px;
+        line-height: 50px;
         color: white;
         margin-left : 0.01em;
         margin-right : 2em;
+        padding-bottom: 30px;
+        }
+
+    /*Overlay Box style under
+      table*/
+    .overlay {
+        position: fixed;
+        top: 0px;
+        right: 0px;
+        padding-top: 20%;
+        width: 32%;
+        height: 100%;
+        overflow-y: auto;
+        background: #0F023D;
+        opacity: .95;
+        z-index: 500;
+        visibility: hidden;
+        }
+
+    /*Table styles to hold
+      dynamic loading content*/
+    #tableOverlay {
+        position: fixed;
+        top: 0px;
+        right: 0px;
+        padding-top: 100px;
+        width: 32%;
+        height: 100%;
+        overflow-y: auto;
+        opacity: .95;
+        z-index: 600;
+        visibility: hidden;
+        }
+
+    /*Set display properties for
+    strategy type*/
+    .strategyType{
+        display: inline-block;
+        width: 250px;
+        }
+
+    /*Properties for Edge Type title*/
+    #edgeTypeTitle, h4{
+        padding-top: 50px;
+        padding-left: 12%;
+        font-size: 14px;
+        font-family: Raleway, extra-light;
+        align-content: center;
+        z-index:800;
+        color: #60E8E7;
+        }
+
+    /*Properties for Edge Type title
+      loaded through Javascript*/
+    #edgeText{
+        display: inline-block;
+        font-size:14px;
+        padding-left: 12%;
+        font-family: Raleway, extra-light;
+        color: #FAE959;
+        }
+
+    /*Properties for Wave Exposure title
+      loaded through Javascript*/
+    #waveText{
+        display: inline-block;
+        font-size: 14px;
+        font-family: Raleway, extra-light;
+        padding-left: 4%;
+        color: #FAE959;
+        }
+
+    /*Properties for Topography title
+      loaded through Javascript*/
+    #topoText{
+        display: inline-block;
+        font-size: 14px;
+        font-family: Raleway, extra-light;
+        padding-left: 10%;
+        color: #FAE959;
+        }
+
+    /*Properties for Wave Exposure title*/
+    #waveExpTitle, h4{
+        padding-top: 10px;
+        padding-left: 12%;
+        font-family: Raleway, extra-light;
+        font-size: 14px;
+        color: #60E8E7;
+        align-content: center;
+        z-index:800;
+        }
+
+    /*Properties for Topography title*/
+    #topoTitle, h4{
+        padding-top: 10px;
+        padding-left: 12%;
+        font-family: Raleway, extra-light;
+        font-size: 14px;
+        color: #60E8E7;
+        align-content: center;
+        z-index:800;
+        }
+
+    /*No padding between the strategies*/
+    #spaceBtwTitleAndStrats {
+        padding: 0px;
+        }
+
+    /*Properties for table header*/
+    #tableHeader, th{
+        font-size: 15px;
+        color: #60E8E7;
+        padding-left: 3%;
+        line-height: 30px;
+        z-index:800;
+        }
+
+    /*Properties for each of the
+    strategy headers*/
+    .strategyHeaders, th{
+        padding-left: 3%;
+        padding-bottom: 7px;
+        padding-top: 20px;
+        font-size: 15px;
+        color: #60E8E7;
+        line-height: 15px;
+        z-index:1800;
+        }
+
+    /*Properties for each of the
+    strategy types*/
+    .strategyType, td{
+        font-size: 14px;
+        padding-left: 4%;
+        line-height: 30px;
+        color: white;
+        z-index:1800;
+        opacity: 90%;
+        }
+
+    /*Add some height between
+    each of the strategy headers*/
+    .spaceBtwStrategies{
+        height:30px;
+        }
+}
+
+/* Styles for screens with a maximum
+   width of 939 px*/
+@media only screen and (max-width:939px) {
+
+    /*Properties of container
+    fluid*/
+    .container-fluid{
+        height: 100px;
+        }
+
+    /*Bring navigation down from the top*/
+    .nav{
+        padding-top: 2%;
+        }
+
+    /*Set padding and logo for navbar header*/
+    .navbar-header{
+        padding-left: 2%;
+        align-content: center;
+        }
+
+    /*Set padding and font weight for
+       navbar logo*/
+    .navbar-logo{
+        font-weight: 400;
+        align-content: center;
+        font-size: 35px;
+        color: white;
+        padding-right: 24px;
+        padding-top:30px;
+        }
+
+    /*Set properties for navigation
+      links on nav bar*/
+    .navbar-nav li a {
+        line-height: 14px;
+        margin-left : 0.5em;
+        color:white;
+        font-size: 14px;
+        padding-top: 30px;
+        padding-left: 0px;
+        }
+
+    /*Overlay Box style under
+      table*/
+    .overlay {
+        position: fixed;
+        top: 0px;
+        right: 0px;
+        padding-top: 20%;
+        width: 40%;
+        height: 100%;
+        overflow-y: auto;
+        background: #0F023D;
+        opacity: .95;
+        z-index: 500;
+        visibility: hidden;
+        }
+
+    /*Table styles to hold
+      dynamic loading content*/
+    #tableOverlay {
+        position: fixed;
+        top: 0px;
+        right: 0px;
+        padding-top: 100px;
+        width: 40%;
+        height: 100%;
+        overflow-y: auto;
+        opacity: .95;
+        z-index: 600;
+        visibility: hidden;
+        }
+
+    /*Properties for each of the
+    strategy types*/
+    .strategyType{
+        display: inline-block;
+        width: 180px;
+        }
+
+    /*Properties for Edge Type title*/
+    #edgeTypeTitle, h4{
+        padding-top: 40px;
+        padding-left: 12%;
+        font-size: 12px;
+        align-content: center;
+        z-index:800;
+        color: #60E8E7;
+        }
+
+    /*Properties for Edge Type title
+    populated through Javascript*/
+    #edgeText{
+        display: inline-block;
+        font-size:12px;
+        padding-left: 14%;
+        color: #FAE959;
+    }
+
+    /*Properties for Wave Exposure title
+    populated through Javascript*/
+    #waveText{
+        display: inline-block;
+        font-size: 12px;
+        padding-left: 5%;
+        color: #FAE959;
+        }
+
+    /*Properties for Topography title
+    populated through Javascript*/
+    #topoText{
+        display: inline-block;
+        font-size: 12px;
+        padding-left: 12%;
+        color: #FAE959;
+        }
+
+    /*Properties for Wave Exposure title*/
+    #waveExpTitle, h4{
+        padding-top: 10px;
+        padding-left: 12%;
+        font-size: 12px;
+        color: #60E8E7;
+        align-content: center;
+        z-index:800;
+        }
+
+    /*Properties for Topography title*/
+    #topoTitle, h4{
+        padding-top: 10px;
+        padding-left: 12%;
+        font-size: 12px;
+        color: #60E8E7;
+        align-content: center;
+        z-index:800;
+        }
+
+    /*No padding between the strategies*/
+    #spaceBtwTitleAndStrats {
+        padding: 0px;
+        }
+
+    /*Table Header Properties*/
+    #tableHeader, th{
+        font-size: 13px;
+        color: #60E8E7;
+        padding-left: 3%;
+        line-height: 30px;
+        z-index:800;
+        font-family: Raleway, extra-light;
+        }
+
+    /*Strategy Header Properties*/
+    .strategyHeaders, th{
+        padding-left: 3%;
+        padding-bottom: 7px;
+        padding-top: 20px;
+        font-size: 13px;
+        color: #60E8E7;
+        line-height: 15px;
+        z-index:1800;
+        font-family: Raleway, extra-light;
+        }
+
+    /*Strategy Type Properties*/
+    .strategyType, td{
+        font-size: 12px;
+        padding-left: 4%;
+        line-height: 30px;
+        color: white;
+        z-index:1800;
+        opacity: 90%;
+        }
+
+    /*Add height between strategies*/
+    .spaceBtwStrategies{
+        height:30px;
     }
 }
+
+
+
 
 
 
